package com.vale.warehouses.app.model;

public enum Category {
    First,
    Second,
    Third,
    Forth,
    Fifth
}
