package com.vale.warehouses.app.model;

public enum WarehouseType {
    ClimateControlled,
    Granary,
    Refrigerated,
    Clothing,
    Automated
}
